force-app/main/default/objects/DepositBank__c/DepositBank__c.object-meta.xml
<CustomObject>
    <label>Deposit+Bank</label>
    <nameField>
        <displayFormat>DPB-{000000}</displayFormat>
        <label>DEPOSIT+BANK ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Deposit+Bank</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>