force-app/main/default/objects/DepositBank__c/fields/AmountOfInboundDepositLocalFormula__c.field-meta.xml
<CustomField>
    <fullName>AmountOfInboundDepositLocalFormula__c</fullName>
    <formula>DepositID__r.TotalAmountOfDepositFromCustomer__c</formula>
    <label>AMOUNT OF INBOUND DEPOSIT(LOCAL)-FORMU</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>