force-app/main/default/objects/DepositBank__c/fields/AmountOfOutboundDepositLocalForBank__c.field-meta.xml
<CustomField>
    <fullName>AmountOfOutboundDepositLocalForBank__c</fullName>
    <label>AMOUNT OF OUTBOUND DEPOSIT(LOCAL)-BANK</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>