force-app/main/default/objects/DepositBank__c/fields/AmountOfOutboundDepositUSDForBank__c.field-meta.xml
<CustomField>
    <fullName>AmountOfOutboundDepositUSDForBank__c</fullName>
    <label>AMOUNT OF OUTBOUND DEPOSIT(USD)-FOR BANK</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>