force-app/main/default/objects/DepositBank__c/fields/DepositID__c.field-meta.xml
<CustomField>
    <fullName>DepositID__c</fullName>
    <label>DEPOSIT ID</label>
    <referenceTo>Deposit__c</referenceTo>
    <relationshipLabel>DEPOSIT+BANK</relationshipLabel>
    <relationshipName>DepositBank</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>